--- a/css/style.css
+++ b/css/style.css
@@ -7,3 +7,107 @@
     -o-background-size: cover;
     background-size: cover;
   }
+#contactForm {
+margin: 100px 500px 50px 500px;
+}
+
+.bodyContact {
+  background: url("../images/book11.jpg");
+  background-size: 100%;
+}
+
+.bodyPrice {
+  background: url("../images/book8.jpg");
+  background-size: 100%;
+}
+
+.bodySearch {
+  background: url("../images/book9.jpg");
+  background-size: 100%;
+}
+
+.searchContainer {
+  margin: 100px;
+  margin-bottom: 50px;
+  text-align: center;
+
+}
+  
+#searchImg {
+    width: 270px;
+    height: 95px;
+
+  }
+  
+.search {
+    width: 500px;
+    height: 28px;
+    border-top: 1px solid #bdbdbd;
+    border-bottom: 1px solid #d3d3d3;
+    border-right: 1px solid #d3d3d3;
+    border-left: 1px solid #d3d3d3;
+    padding-right: 30px;
+    font: 16px arial, sans-serif;
+    text-indent:5px;   
+    background-repeat:no-repeat;
+    background-position:548px 4px;
+    background-size:14px 19px;
+    }
+  
+.buttonSearch {
+    border: 1px solid #d3d3d3;
+    background: #f3f3f3;
+    color:#696969;
+    margin-left:4px;
+    margin-right:4px;
+    margin-top: 15px;
+    font-family: arial, sans-serif;
+    font-size: 11px;
+    font-weight: bold;
+    padding: 7px;
+    border-radius:2px;
+  }
+  
+.buttonSearch:hover {
+    color: #2a2a2a;
+    border: 1px solid #bdbdbd;
+  }
+
+  .section {
+    clear: both;
+    padding: 0px;
+    margin: 0px;
+  }
+  
+  #resultContainer {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 1000px;
+    border: 5px whitesmoke solid;
+    margin: 0 auto;
+}
+
+.resultItem1 {
+    width: 300px;
+    height: 200px;
+    border: 1px black solid;
+    background: white;
+    margin: 20px;
+}
+
+.resultItem2 {
+  width: 300px;
+  height: 200px;
+  border: 1px black solid;
+  background: white;
+  margin: 20px;
+}
+
+.resultItem3 {
+  width: 300px;
+  height: 200px;
+  border: 1px black solid;
+  background: white;
+  margin: 20px;
+}
