--- a/css/style.css
+++ b/css/style.css
@@ -100,7 +100,7 @@ margin: 100px 500px 50px 500px;
   width: 300px;
   height: 200px;
   border: 1px black solid;
-  background: white;
+  background: burlywood;
   margin: 20px;
 }
 
@@ -108,6 +108,6 @@ margin: 100px 500px 50px 500px;
   width: 300px;
   height: 200px;
   border: 1px black solid;
-  background: white;
+
   margin: 20px;
 }
