activate search btn by caling googlebook API and view some results, change search.html background and font,do some styling for header and footer

--- a/css/search.css
+++ b/css/search.css
@@ -1,5 +1,5 @@
 .bodySearch {
-    background: url("../images/book9.jpg");
+    background: url("../images/white-background.jpg");
     background-size: 100%;
   }
   
