--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,10 @@
+html {
+  position: relative;
+  min-height: 100%;
+}
+body {
+  margin-bottom: 60px; /* Margin bottom by footer height */
+}
 .carousel-item {
     height: 100vh;
     min-height: 300px;
@@ -22,7 +29,7 @@ margin: 100px 500px 50px 500px;
 }
 
 .bodySearch {
-  background: url("../images/book9.jpg");
+  background: url("../images/white-background.jpg");
   background-size: 100%;
 }
 
@@ -110,4 +117,11 @@ margin: 100px 500px 50px 500px;
   border: 1px black solid;
 
   margin: 20px;
+}
+.footer {
+  position: absolute;
+  bottom: 0;
+	width: 100%;
+  line-height: 60px; /* Vertically center the text there */
+  background-color: #f5f5f5;
 }
