--- a/css/style.css
+++ b/css/style.css
@@ -47,7 +47,7 @@ margin: 100px 500px 50px 500px;
 }
 
 .bodyContact {
-  background: url("../images/book11.jpg");
+  background: url("../images/white-background.jpg");
   background-size: 100%;
 }
 
@@ -57,6 +57,11 @@ margin: 100px 500px 50px 500px;
 }
 
 .bodySearch {
+  background: url("../images/white-background.jpg");
+  background-size: 100%;
+}
+
+.bodyLogin {
   background: url("../images/white-background.jpg");
   background-size: 100%;
 }
@@ -163,4 +168,8 @@ margin: 100px 500px 50px 500px;
   width: 70%; /* for example */
   margin: auto;
   margin-top: 50px;
+}
+
+.loginContainer {
+  margin-top: 100px;
 }
