--- a/css/style.css
+++ b/css/style.css
@@ -2,8 +2,17 @@ html {
   position: relative;
   min-height: 100%;
 }
+.container-fluid {
+  padding-right:0;
+  padding-left:0;
+  margin-right:auto;
+  margin-left:auto
+}
 body {
   margin-bottom: 60px; /* Margin bottom by footer height */
+  margin: 0;
+  padding-top: 50px;
+ 
 }
 
 .nav-link,myFont{
@@ -33,7 +42,7 @@ transform-style: preserve-3d;
   
     max-width: 100%;
     width: 100%;
-    height:90vh;
+    height:80vh;
     min-height: 70%;
     background: no-repeat center center scroll;
     -webkit-background-size: cover;
@@ -68,11 +77,7 @@ margin: 100px 500px 50px 500px;
 
 }
   
-#searchImg {
-    width: 270px;
-    height: 95px;
 
-  }
   
 .search {
     width: 500px;
@@ -84,9 +89,7 @@ margin: 100px 500px 50px 500px;
     padding-right: 30px;
     font: 16px arial, sans-serif;
     text-indent:5px;   
-    background-repeat:no-repeat;
-    background-position:548px 4px;
-    background-size:14px 19px;
+    
     }
   
 .buttonSearch {
@@ -123,35 +126,14 @@ margin: 100px 500px 50px 500px;
     margin: 0 auto;
 }
 
-.resultItem1 {
-    width: 300px;
-    height: 200px;
-    border: 1px black solid;
-    background: white;
-    margin: 20px;
-}
 
-.resultItem2 {
-  width: 300px;
-  height: 200px;
-  border: 1px black solid;
-  background: burlywood;
-  margin: 20px;
-}
-
-.resultItem3 {
-  width: 300px;
-  height: 200px;
-  border: 1px black solid;
-
-  margin: 20px;
-}
 .footer {
   position: absolute;
   bottom: 0;
 	width: 100%;
   line-height: 60px; /* Vertically center the text there */
   background-color: #f5f5f5;
+  
 }
 
 .homeBody {
