--- a/css/style.css
+++ b/css/style.css
@@ -200,9 +200,9 @@ img { max-width: 100%; }
 }
 .btn-link-1:hover, .btn-link-1:focus, .btn-link-1:active { outline: 0; opacity: 0.6; color: #fff; }
 
-.btn-link-1.btn-link-1-facebook { background: #4862a3; }
+/* .btn-link-1.btn-link-1-facebook { background: #4862a3; }
 .btn-link-1.btn-link-1-twitter { background: #55acee; }
-.btn-link-1.btn-link-1-google-plus { background: #dd4b39; }
+.btn-link-1.btn-link-1-google-plus { background: #dd4b39; } */
 
 .btn-link-1 i {
 	padding-right: 5px;
